Can't delete scene using context menu in "Blender File" view in outliner #109802
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#109802
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.79
Blender Version
Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash:
c7fc78b81ecb
Worked: (newest version of Blender that worked as expected)
Problem:
Can't delete scene using context menu in "Blender File" view in outliner.
Reproduce:
Original description:
If you have a number of scenes, selecting them and right click (will send you to the one you right click) to delete, will delete them, and sometimes it's impossible, even with dozen of attempts there is nothing that can delete any of them. And then it works again, without doing anything.
Exact steps for others to reproduce the error
Having the workspace pinned to the active scene does not seem to be the issue, it's just random, you try you try it works, you try you try it doesn't...
MAYBE, it's because in scene view it does work, in blend file view it does not. That would be a bug as you can right-click delete a scene from the blend file view, but it seems to do nothing.
@loicbramoulle Could you try giving us a file that contains such multi-scene setup? Thanks!
Hi thanks for your answer, I just created a factory default file, added scenes, and yes clicking delete only works in scene view, not blend file:
(Also I think switching scene by doing right-click is an unexpected behaviour, only clicking a scene should open that scene, as right-click should not also do a "left-click action")
Thanks again.
Can confirm that:
bpy.ops.scene.delete()
will always work.Also this doesn't look random to me, in "Blender File" view, the behaviour is consistent (not able to delete).
sometimes deleting scenes is impossible, randomly.to Can't delete scene using context menu in "Blender File" view in outlinerPhilipp Oeser referenced this issue2023-07-12 14:37:19 +02:00