Fix #109802: Outliner "Blender File" view cant delete scene

`outliner_do_scene_operation` wasnt recursive, so it only acted on the
top-level `TreeElement` (which was fine for Scenes view, but failed in
`Blender File` view).

Now use an iterator that handles open subhierarchies as well.

Pull Request: https://projects.blender.org/blender/blender/pulls/109810

Pull Request: https://projects.blender.org/blender/blender/pulls/110061